@@ -7,7 +7,7 @@ AM_CPPFLAGS = 		-I$(srcdir)/../lib \
 
 bin_PROGRAMS =		softhsm
 softhsm_SOURCES =	softhsm.cpp softhsm.h
-softhsm_LDADD =		../lib/libsofthsm.la -lstdc++
+softhsm_LDADD =		../lib/libsofthsm.la -lstdc++ @BOTAN_LIBS@ @SQLITE3_LIBS@
 softhsm_LDFLAGS =	-no-install
 
 EXTRA_DIST =		$(srcdir)/*.h
